# xfce4-cpu-waterfall-plugin

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README.md  configure.ac.in
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  cpu.cc  cpu.h  cpuheatmap.desktop.in  cpuwaterfall.desktop.in  draw_graph_heatmap.cc  draw_graph_heatmap.h  draw_waterfall.cc  draw_waterfall.h  heatmap.cc  heatmap.h  mode.cc  mode.h  os.cc  os.h  plugin.c  plugin.h  properties.cc  properties.h  settings.cc  settings.h  waterfall.cc  waterfall.h
po/: POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+17 more)
xfce4++/: util.h
